--- a/hw01/HW1.tex
+++ b/hw01/HW1.tex
@@ -7,7 +7,7 @@
 \input{macros.tex}
 
 % info for header block in upper right hand corner
-\name{}
+\name{Xingyao Chen}
 \class{Math189R SU17}
 \assignment{Homework 1}
 \duedate{Tuesday, May 15, 2017}
@@ -136,34 +136,76 @@ Given the dataset $\Dc = \{(x,y)\} = \{(0,1), (2,3), (3,6), (4,8)\}$
 \begin{solution}
     \begin{enumerate}
       \item
-      \begin{tabular}{l|l|| l| l }
-        $x_i$ & $y_i$ & $x_i^2$ & $x_iy_i$\\
+      \begin{tabular}{l|l|l|| l| l }
+        & $x_i$ & $y_i$ & $x_i^2$ & $x_iy_i$\\
         \hline
-        0 & 1 & 0 & 0\\
-        2 & 3 & 4 & 6 \\
-        3 & 6 & 9 & 18 \\
-        4 & 8 & 16 & 32
+        &0 & 1 & 0 & 0\\
+        &2 & 3 & 4 & 6 \\
+        &3 & 6 & 9 & 18 \\
+        &4 & 8 & 16 & 32\\
+        \hline
+        sum & 9 & 18 & 29 & 56
       \end{tabular}
       \begin{align*}
         m =& \frac{n \sum_{i=1}^n x_iy_i  - \left(\sum_{i=1}^n x_i\right) \left(\sum_{i=1}^n y_i\right) }{ \left(n\sum_{i=1}^n x_i^2 \right) - \left(\sum_{i=1}^n x_i \right)^2}\\
         =& \frac{4\cdot 56 - 9\cdot 18}{ 4 \cdot 29 -  81}\\
-        \approx & 1.77\\
+      =& \boxed{\frac{62}{35}}\\
         b =& \frac{\left(\sum_{i=1}^n x_i^2\right) \left( \sum_{i=1}^n  y_i\right)
         - \left(\sum_{i=1}^n x_i\right)\left(\sum_{i=1}^n x_iy_i\right)}{
         n\left(\sum_{i=1}^n x_i^2\right)- \left(\sum_{i=1}^n x_i\right)^2}\\
-        =& \frac{ 29\cdot 19 - 9\cdot 56 }{4\cdot 29 - 81}\\
-        =& -6.94
+        =& \frac{ 29\cdot 18 - 9\cdot 56 }{4\cdot 29 - 81}\\
+      =&\boxed{\frac{18}{35}}
       \end{align*}
 
     \item \begin{align*}
-    \theta =& (X^TX)^{-1}X^T\yy\\
-    =& 29^{-1}\begin{bmatrix}
+    \thetab =& (X^TX)^{-1}X^T\yy\\
+    =& \begin{bmatrix}
+    4 & 9 \\
+    9 & 29
+  \end{bmatrix}^{-1}
+    \begin{bmatrix}
+    1 & 1 & 1 & 1\\
     0&2&3 &4
   \end{bmatrix}\begin{bmatrix}
-  1 \\3\\6\\8
+  1\\
+    3 \\
+    6\\
+   8
   \end{bmatrix}\\
-  \approx & 1.93
+  =& \frac{1}{35} \begin{bmatrix}
+  29 & -9 \\
+  -9 & 4
+  \end{bmatrix}   \begin{bmatrix}
+    1 & 1 & 1 & 1\\
+    0&2&3 &4
+  \end{bmatrix}\begin{bmatrix}
+  1\\
+    3 \\
+    6\\
+   8
+  \end{bmatrix}\\
+  =&\frac{1}{35}\begin{bmatrix}
+  29 & 11 & 2 & -7 \\
+  -9 & -1 & 3 & 7
+  \end{bmatrix}\begin{bmatrix}
+  1\\
+    3 \\
+    6\\
+   8
+  \end{bmatrix}\\
+  =& \frac{1}{35}\begin{bmatrix}
+  18\\62
+  \end{bmatrix}\\
+  =& \boxed{\begin{bmatrix}
+  18/35\\
+  62/35
+\end{bmatrix}}
     \end{align*}
+    \item See python file hw1pr2.py\\
+    \includegraphics[width = 0.9\linewidth]{hw1pr2c}
+    \item See python file hw1pr2.py\\
+    \includegraphics[width = 0.9\linewidth]{hw1pr2d}
+
     \end{enumerate}
 \end{solution}
 \newpage
